--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ packages = [{include = "ete_deployment"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+ruamel-yaml = "^0.17.21"
+imageio = "^2.22.4"
+dvclive = "^1.0.1"
 
 
 [build-system]
